ik durfde t eigenlijk niet te pushen maar i was scared i was gonn lose it

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -3,4 +3,8 @@
     <string name="app_name">NS-To-GO</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+    <string name="message_main">"Are you lost and looking to get out of here ? Click here !"</string>
+    <string name="departures">"Departures:</string>
+
+
 </resources>
